[package]
name = "goose_gremlin"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.56.0", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader"] }
enigo = "0.1"
winit = { version = "0.29", features = ["rwh_05"]}
pixels = "0.13"
rand = "0.8"
pollster = "0.3"
raw-window-handle = "0.6"